# pvextractor

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGES  CHANGES.md  MANIFEST.in  README.md  README.rst  index.html  params.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  publish.yml  update-changelog.yaml
docs/: Makefile  api.rst  conf.py  ds9.rst  glue.rst  gui.rst  index.rst  make.bat  plotting.rst  programmatic.rst  rtd-pip-requirements
examples/: IRAS 05358 Slicing.ipynb  IRAS05358Slicing.html  IRAS05358Slicing.ipynb
pvextractor/: __init__.py  conftest.py  gui.py  pvextractor.py  pvregions.py  pvwcs.py
pvextractor/geometry/: __init__.py  helpers.py  line_sampling.py  line_slices.py  path.py  paths.py  poly_slices.py  polygon.py  slices.py  thick_slices.py
pvextractor/geometry/tests/: test_helpers.py  test_line_sampling.py
pvextractor/glue_gui/: main.py  setup_package.py  slicer.ui
pvextractor/tests/: setup_package.py  test_gui.py  test_slicer.py  test_wcspath.py
pvextractor/tests/data/: tests.reg
pvextractor/utils/: __init__.py  cube_info.py  header.py  wcs_utils.py
scripts/: ds9_pvextract.ans  ds9_pvextract.py  pvextractor-gui
