[project]
name = "pvextractor"
dynamic = [
    "version"
]
description = "Position-velocity diagram extractor."
readme = "README.rst"
authors = [
    { name = "Adam Ginsburg", email = "adam.g.ginsburg@gmail.com" },
    { name = "Tom Robitaille" },
]
license = "BSD-3-Clause"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "astropy>=6.1",
  "numpy>=1.24",
  "scipy>=1.8",
  "packaging>=19",
  "radio-beam>=0.3.5",
  "setuptools>=62.3.3",
  "matplotlib>=3.5",
  "qtpy>=2.0",
  "spectral-cube>=0.4.0",
]


[project.optional-dependencies]
docs = [
  "matplotlib",
  "sphinx-astropy",
]
test = [
  "pytest>=5",
  "pytest-astropy>=0.10",
  "pytest-cov>=3",
  ]

[project.urls]
homepage = "https://pvextractor.readthedocs.org"
documentation = "https://pvextractor.readthedocs.org"
repository = "https://github.com/radio-astro-tools/pvextractor"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
            "setuptools>=61.2",
            "setuptools_scm"
           ]

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools.package-data]
"pvextractor.tests" = [
  "data/*",
  "data/*/*",
]

[tool.pytest.ini_options]
minversion = "3.0"
norecursedirs = [ "build", "docs/_build" ]
doctest_plus = "enabled"
filterwarnings = [
    "error::ResourceWarning",
    "error::DeprecationWarning",
    # Triggered in radio-beam as a DeprecationWarning or with newer Python as a SyntaxWarning
    "ignore:invalid escape sequence",
]

[tool.coverage.run]
omit = [
  "spectral-cube/__init__*",
  "spectral-cube/conftest.py",
  "spectral-cube/*setup*",
  "spectral-cube/*/tests/*",
  "spectral-cube/tests/test_*",
  "spectral-cube/extern/*",
  "spectral-cube/utils/compat/*",
  "spectral-cube/version*",
  "spectral-cube/wcs/docstrings*",
  "spectral-cube/_erfa/*",
  "*/spectral-cube/__init__*",
  "*/spectral-cube/conftest.py",
  "*/spectral-cube/*setup*",
  "*/spectral-cube/*/tests/*",
  "*/spectral-cube/tests/test_*",
  "*/spectral-cube/extern/*",
  "*/spectral-cube/utils/compat/*",
  "*/spectral-cube/version*",
  "*/spectral-cube/wcs/docstrings*",
  "*/spectral-cube/_erfa/*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  'def main\(.*\):',
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
]

[tool.upload_docs]
upload-dir = "docs/_build/html"
show-response = "1"
