[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = pvextractor
description = Position-velocity diagram extractor.
long_description =
author = Adam Ginsburg and Thomas Robitaille
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = http://pvextractor.readthedocs.org
edit_on_github = False
github_project = astropy/pvextractor
