[metadata]
name = pvextractor
description = Position-velocity diagram extractor.
long_description = file: README.rst
author = Adam Ginsburg and Thomas Robitaille
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = http://pvextractor.readthedocs.org
edit_on_github = False
github_project = astropy/pvextractor

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    matplotlib>=2.0
	scipy
    qtpy
    spectral-cube

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
pvextractor.tests = coveragerc, data/*.reg, data/*.hdr

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
testpaths = "pvextractor" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  pvextractor/conftest.py
  pvextractor/*setup_package*
  pvextractor/tests
  pvextractor/*/tests/*
  pvextractor/version*
  */pvextractor/conftest.py
  */pvextractor/*setup_package*
  */pvextractor/tests
  */pvextractor/*/tests/*
  */pvextractor/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
