[metadata]
name = pvextractor
author = Adam Ginsburg and Thomas Robitaille
author_email = adam.g.ginsburg@gmail.com
license = BSD 3-Clause
license_file = LICENSE
url = http://pvextractor.readthedocs.io
description = Position-velocity diagram extractor.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = radio-astro-tools/pvextractor

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numpy>=1.22
    astropy>=5.0
    matplotlib>=3.5
    scipy>=1.8
    qtpy>=2.0
    spectral-cube>=0.4

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
pvextractor.tests = coveragerc, data/*.reg, data/*.hdr

[tool:pytest]
testpaths = "pvextractor" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = -p no:warnings
open_files_ignore = "*.ttf"
filterwarnings =
    error::DeprecationWarning
    ignore:`np.float` is a deprecated alias for the builtin

[coverage:run]
omit =
    pvextractor/_astropy_init*
    pvextractor/conftest.py
    pvextractor/*setup_package*
    pvextractor/tests/*
    pvextractor/*/tests/*
    pvextractor/version*
    */pvextractor/_astropy_init*
    */pvextractor/conftest.py
    */pvextractor/*setup_package*
    */pvextractor/tests/*
    */pvextractor/*/tests/*
    */pvextractor/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
